--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</ul>
 	</div>
 </div>
-<audio src="music/想见你.mp3" autoplay="autoplay" loop="loop"></audio>
+<audio src="Secret/music/想见你.mp3" autoplay="autoplay" loop="loop">
 <script src="Secret/js/jquery-2.1.1.min.js" type="text/javascript"></script>
 <script src="Secret/js/jquery-1.8.4.min.js" type="text/javascript"></script>
 
