--- a/Secret/begin.html
+++ b/Secret/begin.html
@@ -36,6 +36,6 @@
 </div>
 
   <script src="js/indexl.js"></script>
- <audio src="music/3.mp3" autoplay="autoplay" loop="loop"></audio>
+ <audio src="music/3.mp3" autoplay="autoplay" loop="loop">
 </body>
 </html>
