--- a/Secret/Shadow.html
+++ b/Secret/Shadow.html
@@ -61,6 +61,6 @@
 
 <script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
 <script src="js/img.js" type="text/javascript"></script>
-<audio src="music/因为你.mp3" autoplay="autoplay" loop="loop"></audio>
+<audio src="music/因为你.mp3" autoplay="autoplay" loop="loop">
 </body>
 </html>
