--- a/Secret/BirthdayCake.html
+++ b/Secret/BirthdayCake.html
@@ -218,7 +218,7 @@
 
 <script src='js/jquery-2.1.1.min.js'></script>
 <script src='js/happy.js'></script>
-<audio src="music/阿信 - happy.BIRTH.day [mqms2].qmc3" autoplay="autoplay" loop="loop">
+<audio src="music/happy.mp3" autoplay="autoplay" loop="loop">
 </body>
 
 </html>
